--- a/mainpage.html
+++ b/mainpage.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 	<h1>메인 페이지</h1>
-	<div><a href="">사이트 1</a></div>
-	<div><a href="">사이트 2</a></div>
+	<div><a href="site.html">사이트 1</a></div>
+	<div><a href="site2.html">사이트 2</a></div>
 	<div id="fixed">2019775063 / 차기벽</div>
 </body>
 </html>
